--- a/cloud-eureka-server7002/src/main/resources/application.yml
+++ b/cloud-eureka-server7002/src/main/resources/application.yml
@@ -4,7 +4,7 @@ eureka:
   instance:
     hostname: eureka7002.com #eureka服务端的实例名称
   client:
-    #false表示不向注册中心注册自己
+    #false表示不向注册中心注册自己(就像物业公司不会在一楼大厅哪里添加上自己的名称一样)
     register-with-eureka: false
     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
     fetch-registry: false
