--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -4,6 +4,12 @@ spring:
   application:
     #提供相同的服务的微服务的名字应该是一样的，这样客户端才可以获取到http://CLOUD-PAYMENT-SERVICE....
     name: cloud-payment-service
+    zipkin:
+      base-url: http://localhost:9411
+    sleuth:
+      sampler:
+        #采样取值介于 0到1之间，1则表示全部收集
+        probability: 1
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
